// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Box default 1`] = `
.c1 {
  margin: 0;
  padding: 0;
  border: 0;
  font: inherit;
  font-size: 100%;
  vertical-align: baseline;
}

.c0 {
  margin-top: 1.25rem;
}

<div
  className="c0 c1"
>
  🥑
</div>
`;

exports[`Box with SizeNone is valid 1`] = `
.c1 {
  margin: 0;
  padding: 0;
  border: 0;
  font: inherit;
  font-size: 100%;
  vertical-align: baseline;
}

.c0 {
  margin-top: none;
}

<div>
  <div
    className="c0 c1"
  >
    🥑
  </div>
</div>
`;

exports[`Box with null values are removed from styling 1`] = `
.c1 {
  margin: 0;
  padding: 0;
  border: 0;
  font: inherit;
  font-size: 100%;
  vertical-align: baseline;
}

.c0 {
  margin-top: 1.25rem;
}

@media screen and (min-width:48rem) {
  .c0 {
    margin-top: 1rem;
  }
}

<div>
  <div
    className="c0 c1"
  >
    🥑
  </div>
</div>
`;

exports[`Responsive margin top Box 1`] = `
.c1 {
  margin: 0;
  padding: 0;
  border: 0;
  font: inherit;
  font-size: 100%;
  vertical-align: baseline;
}

.c0 {
  margin-top: 1.25rem;
}

@media screen and (min-width:30rem) {
  .c0 {
    margin-top: 1rem;
  }
}

@media screen and (min-width:48rem) {
  .c0 {
    margin-top: 0.5rem;
  }
}

<div>
  <div
    className="c0 c1"
  >
    🥑
  </div>
</div>
`;
